bin_PROGRAMS = btih bturl ben2js

btih_SOURCES = btih.c
btih_LDADD = $(CRYPTO_LIBS) $(BENCODING_LIBS)
btih_CFLAGS = $(CRYPTO_CFLAGS) $(BENCODING_CFLAGS)

bturl = bturl.c
bturl_LDADD = $(CRYPTO_LIBS) $(BENCODING_LIBS)
bturl_CFLAGS = $(CRYPTO_CFLAGS) $(BENCODING_CFLAGS)

ben2js = ben2js.c
ben2js_LDADD = $(BENCODING_LIBS)
ben2js_CFLAGS = $(BENCODING_CFLAGS)
