bin_PROGRAMS = btih bturl ben2js

btih_SOURCES = btih.c
btih_LDADD = $(ivartjcrypto_LIBS) $(ivartjbencoding_LIBS)
btih_CFLAGS = $(ivartjcrypto_CFLAGS) $(ivartjbencoding_CFLAGS)

bturl_SOURCES = bturl.c
bturl_LDADD = $(ivartjcrypto_LIBS) $(ivartjbencoding_LIBS)
bturl_CFLAGS = $(ivartjcrypto_CFLAGS) $(ivartjbencoding_CFLAGS)

ben2js_SOURCES = ben2js.c
ben2js_LDADD = $(ivartjbencoding_LIBS)
ben2js_CFLAGS = $(ivartjbencoding_CFLAGS)
